--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,11 @@
             </a>
           </li>
           {% endif %}
+          <li>
+            <a href="http://developer.sittercity.com/">
+              <span class="username">Developer Hub</span>
+            </a>
+          </li>
         </ul>
       </div>
 
