--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,29 @@
+<pre class="ascii-border">
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+</pre>
+
 <header class="site-header">
-
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
+  <div class="wrapper header-wrapper">
+    <pre style="font-size: 14px; background: none; border: none; padding: 0; margin: 0; line-height: 1em;">
+    <a class="site-title" href="{{ site.baseurl }}/">
+ ________  ___  _________  _________  _______   ________  ________  ___  _________    ___    ___     
+|\   ____\|\  \|\___   ___\\___   ___\\  ___ \ |\   __  \|\   ____\|\  \|\___   ___\ |\  \  /  /|
+\ \  \___|\ \  \|___ \  \_\|___ \  \_\ \   __/|\ \  \|\  \ \  \___|\ \  \|___ \  \_| \ \  \/  / /
+ \ \_____  \ \  \   \ \  \     \ \  \ \ \  \_|/_\ \   _  _\ \  \    \ \  \   \ \  \   \ \    / / 
+  \|____|\  \ \  \   \ \  \     \ \  \ \ \  \_|\ \ \  \\  \\ \  \____\ \  \   \ \  \   \/  /  /  
+    ____\_\  \ \__\   \ \__\     \ \__\ \ \_______\ \__\\ _\\ \_______\ \__\   \ \__\__/  / /    
+   |\_________\|__|    \|__|      \|__|  \|_______|\|__|\|__|\|_______|\|__|    \|__|\___/ /     
+    \|_________|                                                                     \|___|/      
+       _________  _______   ________  ___  ___     
+      |\___   ___\\  ___ \ |\   ____\|\  \|\  \    
+      \|___ \  \_\ \   __/|\ \  \___|\ \  \\\  \   
+           \ \  \ \ \  \_|/_\ \  \    \ \   __  \
+            \ \  \ \ \  \_|\ \ \  \____\ \  \ \  \ 
+             \ \__\ \ \_______\ \_______\ \__\ \__\
+              \|__|  \|_______|\|_______|\|__|\|__|
+    </a>
+    </pre>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -21,7 +41,5 @@
         {% endfor %}
       </div>
     </nav>
-
   </div>
-
 </header>
