--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -170,6 +170,15 @@ pre {
     }
 }
 
+.header-wrapper {
+    max-width: -webkit-calc(#{$header-width} - (#{$spacing-unit} * 2));
+    max-width:         calc(#{$header-width} - (#{$spacing-unit} * 2));
+
+    @include media-query($on-laptop) {    
+        max-width: -webkit-calc(#{$header-width} - (#{$spacing-unit}));
+        max-width:         calc(#{$header-width} - (#{$spacing-unit}));
+    }
+}
 
 
 /**
