--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 
 <header class="site-header">
   <div class="wrapper header-wrapper">
-    <pre style="font-size: 14px; background: none; border: none; padding: 0; margin: 0; line-height: 1em;">
+    <pre>
     <a class="site-title" href="{{ site.baseurl }}/">
  ________  ___  _________  _________  _______   ________  ________  ___  _________    ___    ___     
 |\   ____\|\  \|\___   ___\\___   ___\\  ___ \ |\   __  \|\   ____\|\  \|\___   ___\ |\  \  /  /|
@@ -15,13 +15,13 @@
     ____\_\  \ \__\   \ \__\     \ \__\ \ \_______\ \__\\ _\\ \_______\ \__\   \ \__\__/  / /    
    |\_________\|__|    \|__|      \|__|  \|_______|\|__|\|__|\|_______|\|__|    \|__|\___/ /     
     \|_________|                                                                     \|___|/      
-       _________  _______   ________  ___  ___     
-      |\___   ___\\  ___ \ |\   ____\|\  \|\  \    
-      \|___ \  \_\ \   __/|\ \  \___|\ \  \\\  \   
-           \ \  \ \ \  \_|/_\ \  \    \ \   __  \
-            \ \  \ \ \  \_|\ \ \  \____\ \  \ \  \ 
-             \ \__\ \ \_______\ \_______\ \__\ \__\
-              \|__|  \|_______|\|_______|\|__|\|__|
+  _________  _______   ________  ___  ___     
+ |\___   ___\\  ___ \ |\   ____\|\  \|\  \    
+ \|___ \  \_\ \   __/|\ \  \___|\ \  \\\  \   
+      \ \  \ \ \  \_|/_\ \  \    \ \   __  \
+       \ \  \ \ \  \_|\ \ \  \____\ \  \ \  \ 
+        \ \__\ \ \_______\ \_______\ \__\ \__\
+         \|__|  \|_______|\|_______|\|__|\|__|
     </a>
     </pre>
     <nav class="site-nav">
