Final layout changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,18 @@
 <pre class="ascii-border">
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 </pre>
 
 <footer class="site-footer">
 
   <div class="wrapper">
     <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-2">
+
+      <div class="footer-col  footer-col-desription">
+        <p class="text">{{ site.description }}</p>
+      </div>
+
+      <div class="footer-col  footer-col-links">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -38,15 +43,12 @@
           </li>
           {% endif %}
           <li>
-            <a href="http://developer.sittercity.com/">
-              <span class="username">Developer Hub</span>
-            </a>
+            <a href="http://developer.sittercity.com/"><span class="username no-icon">Developer Hub</span></a>
+          </li>
+          <li>
+            <a href="{{ "/feed.xml" | prepend: site.baseurl }}"><span class="username no-icon">Subscribe via RSS</span></a>
           </li>
         </ul>
-      </div>
-
-      <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
       </div>
     </div>
 
