--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,9 @@
 
 <header class="site-header">
   <div class="wrapper header-wrapper">
-    <pre>
     <a class="site-title" href="{{ site.baseurl }}/">
+    <img src="/assets/img/logo.png" class="site-logo" />
+    <pre>
  ________  ___  _________  _________  _______   ________  ________  ___  _________    ___    ___     
 |\   ____\|\  \|\___   ___\\___   ___\\  ___ \ |\   __  \|\   ____\|\  \|\___   ___\ |\  \  /  /|
 \ \  \___|\ \  \|___ \  \_\|___ \  \_\ \   __/|\ \  \|\  \ \  \___|\ \  \|___ \  \_| \ \  \/  / /
@@ -22,8 +23,8 @@
        \ \  \ \ \  \_|\ \ \  \____\ \  \ \  \ 
         \ \__\ \ \_______\ \_______\ \__\ \__\
          \|__|  \|_______|\|_______|\|__|\|__|
-    </a>
     </pre>
+    </a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
